修改文字错误

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="md:w-2/3 space-y-6">
           <h3 class="text-2xl font-bold text-white">我是一名充满激情的地球物理工作者</h3>
           <p class="text-gray-300">
-            拥有5年以上的地球物理experiencedexperience工作经验及软件开发经验，专注于创建高效、美观且用户友好的数字产品。我热衷于学习新技术，并将其应用到实际项目中解决复杂问题。
+            拥有5年以上的地球物理工作经验及软件开发经验，专注于创建高效、美观且用户友好的数字产品。我热衷于学习新技术，并将其应用到实际项目中解决复杂问题。
           </p>
           <p class="text-gray-300">
             我的技术栈涵盖前后端开发、地球物理软件开发和数据分析等领域。我相信良好的沟通和团队协作是项目成功的关键，并且始终以用户体验为中心进行开发。
