修改云凇学术html名称

--- a/HTML/YSXS.html
+++ b/HTML/YSXS.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>学术文献库 - 个人文献管理系统</title>
+    <title>云凇学术 - 个人文献管理系统</title>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="icon"  href="../images/ysxs.svg" type="image/svg+xml">
@@ -43,7 +43,7 @@
                 <div class="flex items-center">
                     <a href="#" class="flex items-center space-x-2">
                         <i class="fa fa-book text-blue-600 text-2xl"></i>
-                        <span class="text-xl font-bold text-blue-700">学术文献库</span>
+                        <span class="text-xl font-bold text-blue-700">云凇学术</span>
                     </a>
                     
                     <!-- 桌面端导航菜单 -->
@@ -507,7 +507,7 @@
                 <div class="mb-6 md:mb-0">
                     <div class="flex items-center justify-center md:justify-start">
                         <i class="fa fa-book text-blue-600 text-2xl"></i>
-                        <span class="ml-2 text-xl font-bold text-blue-700">学术文献库</span>
+                        <span class="ml-2 text-xl font-bold text-blue-700">云凇学术</span>
                     </div>
                     <p class="mt-2 text-sm text-slate-500 text-center md:text-left">
                         个人学术文献管理系统 © 2024 版权所有
