--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
             <p class="text-gray-400 text-sm mb-4">
               开发了一个云凇学术网站，提供科研文献管理和搜索功能。
             </p>
-            <a href="HTML/References.html" target="_blank" class="text-primary hover:text-primary/80 flex items-center text-sm font-medium transition-colors">
+            <a href="HTML/YSXS.html" target="_blank" class="text-primary hover:text-primary/80 flex items-center text-sm font-medium transition-colors">
               查看详情 <i class="fa fa-arrow-right ml-2"></i>
             </a>
           </div>
