创建static文件夹，重建文件系统

--- a/HTML/Privacy_policy.html
+++ b/HTML/Privacy_policy.html
@@ -207,7 +207,7 @@
                     <a href="https://github.com/YSP0Github" target="_blank" class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center text-gray-300 hover:bg-primary hover:text-white transition-all">
                         <i class="fa fa-github"></i>
                     </a>
-                    <a href="images/GZH_YSZJ_15x15.jpg" target="_blank" class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center text-gray-300 hover:bg-primary hover:text-white transition-all">
+                    <a href="static/images/GZH_YSZJ_15x15.jpg" target="_blank" class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center text-gray-300 hover:bg-primary hover:text-white transition-all">
                         <i class="fa fa-weixin"></i>
                     </a>
                     <a href="https://user.qzone.qq.com/2542039659" target="_blank" class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center text-gray-300 hover:bg-primary hover:text-white transition-all">
