--- a/HTML/SeisY.html
+++ b/HTML/SeisY.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.8/dist/chart.umd.min.js"></script>
-    <link rel="icon" href="../images/SeisY.ico">
+    <link rel="icon" href="../static/images/SeisY.ico">
     <!-- Tailwind配置 -->
     <script>
         tailwind.config = {
@@ -84,7 +84,7 @@
                 <a href="#hero" class="flex items-center space-x-2">
                     <!-- 用SeisY.ico图标 ，不要边缘-->
                     <div class="w-10 h-10 rounded-lg  flex items-center justify-center">
-                        <img src="../images/SeisY.ico" alt="SeisY" class="w-8 h-8">
+                        <img src="../static/images/SeisY.ico" alt="SeisY" class="w-8 h-8">
                     </div>
                     <span class="font-bold text-xl">SeisY</span>
                 </a>
@@ -549,7 +549,7 @@
                 <div>
                     <div class="flex items-center space-x-2 mb-6">
                         <div class="w-10 h-10 rounded-lg flex items-center justify-center">
-                            <img src="../images/SeisY.ico" alt="SeisY" class="w-8 h-8">
+                            <img src="../static/images/SeisY.ico" alt="SeisY" class="w-8 h-8">
                         </div>
                         <span class="font-bold text-xl">SeisY</span>
                     </div>
