--- a/HTML/YSXS.html
+++ b/HTML/YSXS.html
@@ -6,7 +6,7 @@
     <title>云凇学术 - 个人文献管理系统</title>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="icon"  href="../images/ysxs.svg" type="image/svg+xml">
+    <link rel="icon"  href="../static/images/ysxs.svg" type="image/svg+xml">
     <style>
         /* 基础动画定义 */
         .fade-in { animation: fadeIn 0.5s ease-in-out; }
@@ -76,7 +76,7 @@
                     <!-- 用户头像 -->
                     <div class="relative">
                         <button id="user-menu-btn" class="flex items-center focus:outline-none">
-                            <img src="../images/avatar1.png" alt="用户头像" class="w-8 h-8 rounded-full object-cover border-2 border-slate-200">
+                            <img src="../static/images/avatar1.png" alt="用户头像" class="w-8 h-8 rounded-full object-cover border-2 border-slate-200">
                         </button>
                         <!-- 用户下拉菜单 -->
                         <div id="user-menu" class="hidden absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-lg py-2 z-10 fade-in">
