--- a/HTML/yunji.html
+++ b/HTML/yunji.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yunji - 轻量级Python文本编辑器</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" href="../images/yunji.ico">
+    <link rel="icon" href="../static/images/yunji.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <!-- Tailwind配置 -->
@@ -45,7 +45,7 @@
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <div class="flex items-center space-x-2">
                 <div class="w-10 h-10 rounded-lg flex items-center justify-center text-white">
-                    <img src="../images/yunji.ico" alt="Yunji Logo" class="w-8 h-8">
+                    <img src="../static/images/yunji.ico" alt="Yunji Logo" class="w-8 h-8">
                 </div>
                 <span class="text-xl font-bold">Yunji</span>
             </div>
@@ -221,7 +221,7 @@
         <div class="container mx-auto px-4 text-center">
             <div class="flex items-center justify-center space-x-2 mb-4">
                 <div class="w-8 h-8 rounded flex items-center justify-center text-primary">
-                    <img src="../images/yunji.ico" alt="Yunji Logo" class="w-8 h-8">
+                    <img src="../static/images/yunji.ico" alt="Yunji Logo" class="w-8 h-8">
                 </div>
                 <span class="text-lg font-bold">Yunji</span>
                 <!-- 添加 github 链接图标 -->
