--- a/HTML/personal.html
+++ b/HTML/personal.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../YSZJ_style.css" type="text/css" rel="stylesheet">
-    <link rel="icon" href="../images/YSZJ_logo_orange.ico">
+    <link rel="icon" href="../static/images/YSZJ_logo_orange.ico">
     <style>
         html,body{
             height: 100%;
@@ -43,14 +43,14 @@
                 display:none;
             }
             body{
-                /* background: url(images/earth_.jpg); */
+                /* background: url(static/images/earth_.jpg); */
                 background-size: cover;
             }
         }
 
     </style>
 </head>
-<!-- <body background = "images/earth_.jpg"> -->
+<!-- <body background = "static/images/earth_.jpg"> -->
     <!-- <div class="bodybg"> -->
 <body >       
     <video autoplay muted loop src="../videos/earth_.mp4" class="bgviedo"> </video>
@@ -59,7 +59,7 @@
             <div class="menue">
                 <div class="box">
                     <div class="yskylogo"> 
-                        <!-- <img src="images/YSZJ_orange.png" alt="logo" class="logo"> -->
+                        <!-- <img src="static/images/YSZJ_orange.png" alt="logo" class="logo"> -->
                         <a class="logo"> 个人空间 </a> 
                     </div>
                     <ul class="ul_menue">
