--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <!-- <link href="YS.css" rel="stylesheet"> -->
-  <link rel="icon" href="images/YSZJ_logo_orange.ico" type="image/x-icon">
+  <link rel="icon" href="static/images/YSZJ_logo_orange.ico" type="image/x-icon">
   <!-- 配置Tailwind -->
   <script>
     tailwind.config = {
@@ -127,7 +127,7 @@
             <a href="https://github.com/YSP0Github/YunSongHome" target="_blank" class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center text-gray-300 hover:bg-primary hover:text-white transition-all">
               <i class="fa fa-github"></i>
             </a>
-            <a href="images/GZH_YSZJ_15x15.jpg" target="_blank"  class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center text-gray-300 hover:bg-primary hover:text-white transition-all">
+            <a href="static/images/GZH_YSZJ_15x15.jpg" target="_blank"  class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center text-gray-300 hover:bg-primary hover:text-white transition-all">
               <i class="fa fa-weixin"></i>
             </a>
             <a href="https://weibo.com/yunsong519" target="_blank"  class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center text-gray-300 hover:bg-primary hover:text-white transition-all">
@@ -142,7 +142,7 @@
         <!-- 头像/图片 -->
         <div class="md:w-1/2 relative">
           <div class="relative z-10 rounded-2xl overflow-hidden border-4 border-primary/20 shadow-2xl shadow-primary/10 hover-lift">
-            <img src="images/earth.jpg" alt="云松" class="w-full h-auto">
+            <img src="static/images/earth.jpg" alt="云松" class="w-full h-auto">
           </div>
           <!-- 装饰元素 -->
           <div class="absolute -bottom-8 -right-8 w-48 h-48 
@@ -176,7 +176,7 @@
       <div class="flex flex-col md:flex-row gap-12 items-center">
         <div class="md:w-1/3">
           <div class="relative">
-            <img src="images/starrysky1.jpg" alt="关于我的照片" class="rounded-lg shadow-xl">
+            <img src="static/images/starrysky1.jpg" alt="关于我的照片" class="rounded-lg shadow-xl">
             <div class="absolute -bottom-5 -right-5 bg-primary p-4 rounded-lg shadow-lg">
               <p class="text-xl font-bold">5+ 年</p>
               <p class="text-sm">开发经验</p>
@@ -348,7 +348,7 @@
         <!-- 项目卡片1 -->
         <div class="bg-gray-900 rounded-xl overflow-hidden hover-lift">
           <div class="relative overflow-hidden">
-            <img src="images/space_to_earth.jpg" alt="项目图片" class="w-full h-56 object-cover transition-transform duration-500 hover:scale-110">
+            <img src="static/images/space_to_earth.jpg" alt="项目图片" class="w-full h-56 object-cover transition-transform duration-500 hover:scale-110">
             <div class="absolute top-4 right-4 bg-primary text-white text-xs px-3 py-1 rounded-full">
               SeisY
             </div>
@@ -367,7 +367,7 @@
         <!-- 项目卡片2 -->
         <div class="bg-gray-900 rounded-xl overflow-hidden hover-lift">
           <div class="relative overflow-hidden">
-            <img src="images/starrysky3.jpg" alt="项目图片" class="w-full h-56 object-cover transition-transform duration-500 hover:scale-110">
+            <img src="static/images/starrysky3.jpg" alt="项目图片" class="w-full h-56 object-cover transition-transform duration-500 hover:scale-110">
             <div class="absolute top-4 right-4 bg-secondary text-white text-xs px-3 py-1 rounded-full">
               SeisD
             </div>
@@ -386,7 +386,7 @@
         <!-- 项目卡片3 -->
         <div class="bg-gray-900 rounded-xl overflow-hidden hover-lift">
           <div class="relative overflow-hidden">
-            <img src="images/starrysky4.jpg" alt="项目图片" class="w-full h-56 object-cover transition-transform duration-500 hover:scale-110">
+            <img src="static/images/starrysky4.jpg" alt="项目图片" class="w-full h-56 object-cover transition-transform duration-500 hover:scale-110">
             <div class="absolute top-4 right-4 bg-primary text-white text-xs px-3 py-1 rounded-full">
               YSKY
             </div>
@@ -405,7 +405,7 @@
         <!-- 项目卡片4 -->
         <div class="bg-gray-900 rounded-xl overflow-hidden hover-lift">
           <div class="relative overflow-hidden">
-            <img src="images/starrysky1.jpg" alt="项目图片" class="w-full h-56 object-cover transition-transform duration-500 hover:scale-110">
+            <img src="static/images/starrysky1.jpg" alt="项目图片" class="w-full h-56 object-cover transition-transform duration-500 hover:scale-110">
             <div class="absolute top-4 right-4 bg-primary text-white text-xs px-3 py-1 rounded-full">
               funhome
             </div>
@@ -423,7 +423,7 @@
        <!-- 项目卡片5 -->
         <div class="bg-gray-900 rounded-xl overflow-hidden hover-lift">
           <div class="relative overflow-hidden">
-            <img src="images/zhufeng.jpg" alt="项目图片" class="w-full h-56 object-cover transition-transform duration-500 hover:scale-110">
+            <img src="static/images/zhufeng.jpg" alt="项目图片" class="w-full h-56 object-cover transition-transform duration-500 hover:scale-110">
             <div class="absolute top-4 right-4 bg-primary text-white text-xs px-3 py-1 rounded-full">
               yunji
             </div>
@@ -442,7 +442,7 @@
        <!-- 项目卡片6 -->
         <div class="bg-gray-900 rounded-xl overflow-hidden hover-lift">
           <div class="relative overflow-hidden">
-            <img src="images/blackhole.jpg" alt="项目图片" class="w-full h-56 object-cover transition-transform duration-500 hover:scale-110">
+            <img src="static/images/blackhole.jpg" alt="项目图片" class="w-full h-56 object-cover transition-transform duration-500 hover:scale-110">
             <div class="absolute top-4 right-4 bg-primary text-white text-xs px-3 py-1 rounded-full">
               个人空间
             </div>
@@ -593,7 +593,7 @@
           <a href="https://github.com/YSP0Github/YSZJ" target="_blank" class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center text-gray-300 hover:bg-primary hover:text-white transition-all">
             <i class="fa fa-github"></i>
           </a>
-          <a href="images/GZH_YSZJ_15x15.jpg" target="_blank" class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center text-gray-300 hover:bg-primary hover:text-white transition-all">
+          <a href="static/images/GZH_YSZJ_15x15.jpg" target="_blank" class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center text-gray-300 hover:bg-primary hover:text-white transition-all">
             <i class="fa fa-weixin"></i>
           </a>
           <a href="https://user.qzone.qq.com/2542039659" target="_blank" class="w-10 h-10 rounded-full bg-gray-800 flex items-center justify-center text-gray-300 hover:bg-primary hover:text-white transition-all">
