部分文件修改

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
           <div class="relative overflow-hidden">
             <img src="static/images/blackhole.jpg" alt="项目图片" class="w-full h-56 object-cover transition-transform duration-500 hover:scale-110">
             <div class="absolute top-4 right-4 bg-primary text-white text-xs px-3 py-1 rounded-full">
-              个人空间
+              云凇学术
             </div>
           </div>
           <div class="p-6">
@@ -452,7 +452,7 @@
             <p class="text-gray-400 text-sm mb-4">
               开发了一个云凇学术网站，提供科研文献管理和搜索功能。
             </p>
-            <a href="HTML/YSXS.html" target="_blank" class="text-primary hover:text-primary/80 flex items-center text-sm font-medium transition-colors">
+            <a href="http://127.0.0.1:5000/" target="_blank" class="text-primary hover:text-primary/80 flex items-center text-sm font-medium transition-colors">
               查看详情 <i class="fa fa-arrow-right ml-2"></i>
             </a>
           </div>
